# layOWt

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  caledonia_layowt_example.ipynb  layout_example.ipynb  prototype_defining_layout.ipynb  pyproject.toml
docs/source/: conf.py  index.md  index.rst  installation.md  tutorial.md  usage.md
docs/source/notebooks/: GriddedLayoutGenerator_tutorial.ipynb  grid_tutorial.ipynb  layout_tutorial.ipynb  tutorial.ipynb
layowt/: __init__.py
layowt/aep/: __init__.py  aep.py
layowt/grids/: __init__.py  grid.py  utils.py
layowt/layouts/: __init__.py  layout.py  layout_generators.py  utils.py
prototype_inputs/: NGT260-21MW_Vestas_v3.wtg  OW_Turbine_Exclusion_Areas_Fixed_20220525.dbf  OW_Turbine_Exclusion_Areas_Fixed_20220525.qmd  OW_Turbine_Exclusion_Areas_Fixed_20220525.shp  OW_Turbine_Exclusion_Areas_Fixed_20220525.shx  USA-NYB-CBI-NGT260-20-86-001.dbf  USA-NYB-CBI-NGT260-20-86-001.shp  USA-NYB-CBI-NGT260-20-86-001.shx  USA-NYB-CBI-NGT260-21-80-002 (DTF V5).csv  caledonia_area.dbf  caledonia_area.shp  caledonia_area.shx  exclusions - Copy.dbf  exclusions - Copy.shp  exclusions - Copy.shx  exclusions.dbf  exclusions.qmd  exclusions.shp  exclusions.shx  lease_area.dbf  lease_area.qmd  lease_area.shp  lease_area.shx  lease_area_hole.dbf  lease_area_hole.shp  lease_area_hole.shx
tests/grids/: test_grid_utils.py
