[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "layowt"
authors = [{name = "Guillermo Tornero", email = "gtornerodediego@gmail.com"}]
requires-python = ">=3.10"
version = "0.0.1"
dynamic = ["version", "description"]

[project.optional-dependencies]\
doc = [
    "sphinx~=5.0.1",
    "myst-parser",
    "furo",
    "nbsphinx",
    "sphinx-autoapi",
]