[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "layowt"
description = "Multi-disciplinary Offshore Wind Farm Layout Optimisation in Python."
authors = [{name = "Guillermo Tornero", email = "gtornerodediego@gmail.com"}]
requires-python = ">=3.10"
version = "0.0.1"
readme = "README.md"

[project.optional-dependencies]
doc = [
    "sphinx~=5.0.1",
    "myst-parser",
    "furo",
    "nbsphinx",
    "sphinx-autoapi",
]