[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "layowt"
description = "Multi-disciplinary Offshore Wind Farm Layout Optimisation in Python."
authors = [{name = "Guillermo Tornero", email = "gtornerodediego@gmail.com"}]
requires-python = ">=3.10"
version = "0.0.3"
readme = "README.md"
dependencies = [
    "matplotlib==3.5.1",
    "numpy==1.22.3",
    "Shapely==1.8.1.post1",
    "geopandas==0.10.2",
    "SQLAlchemy==1.4.36",
    "pandas==1.4.2",
    "pyproj==3.3.1",
    "py-wake==2.3.0",
    "pytest==7.1.2",
    "psycopg2==2.9.3",
]

[project.optional-dependencies]
doc = [
    "sphinx~=5.0.1",
    "myst-parser",
    "furo",
    "nbsphinx",
    "sphinx-autoapi",
    "sphinx-hoverxref",
    "sphinx-copybutton",
]